--- a/timer.html
+++ b/timer.html
@@ -43,5 +43,10 @@
         <button id="b_2">60 min</button>
 
     </div>
+	
+		<br />
+		<button id="b" onClick="window.location.href = 'index.html';">Return to home</button>
+		<br />
+				
 </body>
 </html>
