--- a/connect_refresh.html
+++ b/connect_refresh.html
@@ -39,6 +39,10 @@
             
         </div>
 		
+			<br />
+			<button id="b" onClick="window.location.href = 'index.html';">Return to home</button>
+			<br />
+		
     
 </body>
 </html>
