--- a/login.html
+++ b/login.html
@@ -44,6 +44,9 @@
 		</span>
 		</div>
 		
+		<br />
+		<button id="b" onClick="window.location.href = 'index.html';">Return to home</button>
+		<br />
 
 		</center>
 	</body>
