--- a/connect_refresh.html
+++ b/connect_refresh.html
@@ -40,7 +40,7 @@
         </div>
 		
 			<br />
-			<button id="b" onClick="window.location.href = 'index.html';">Return to home</button>
+			<button id="b_4" onClick="window.location.href = 'index.html';">Return to home</button>
 			<br />
 		
     
