--- a/connect.html
+++ b/connect.html
@@ -36,7 +36,7 @@
                 <br />
                 
 				<br />
-				<button id="b" onClick="window.location.href = 'index.html';">Return to home</button>
+				<button id="b_4" onClick="window.location.href = 'index.html';">Return to home</button>
 				<br />
 			
         </div>
