--- a/timer.html
+++ b/timer.html
@@ -45,7 +45,7 @@
     </div>
 	
 		<br />
-		<button id="b" onClick="window.location.href = 'index.html';">Return to home</button>
+		<button id="b_4" onClick="window.location.href = 'index.html';">Return to home</button>
 		<br />
 				
 </body>
